👹 fix: index.css letter spacing 간격 변경

--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -4,7 +4,7 @@
 :root {
   font-family: 'Pretendard', sans-serif;
   line-height: 1.4;
-  letter-spacing: -0.025em;
+  letter-spacing: -2.5%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
